<resources>
    <string name="app_name">MovieSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_title">no_title</string>
    <string name="search_title">Search\n</string>
    <string name="trend_title">Trending</string>
    <string name="search_hint">Search</string>
    <string name="no_content">no_content</string>
    <string name="nothing_to_display">Sorry, there\'s nothing to display.</string>
    <string name="disatisfied_icon">Disatisfied Icon</string>
    <string name="title_synopsis">Synopsis</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam posuere arcu ac pharetra vulputate. Nulla tristique orci accumsan, eleifend ipsum nec, eleifend lacus. Vestibulum tortor mi, mattis sed consectetur sed, auctor sed mauris. Sed facilisis nec odio nec vulputate. Duis non sapien ut enim mattis consequat. Fusce in odio semper nibh iaculis maximus. Etiam bibendum justo malesuada neque sollicitudin, quis porta ex efficitur. Pellentesque aliquet efficitur lectus id pretium. Proin ac gravida neque, eget sagittis mi. Suspendisse blandit euismod lacus quis accumsan. Ut molestie, turpis a dictum molestie, dui neque feugiat leo, eu semper nibh dui non ligula. Donec rhoncus mi lacus. Etiam porttitor sem et turpis feugiat dignissim. Maecenas lobortis est sit amet nisi tincidunt pulvinar posuere sit amet augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur vitae suscipit nulla. Fusce nec mauris id enim tristique scelerisque sit amet a enim. Vivamus quam dolor, pharetra sed ligula ut, aliquet varius dui. Mauris lacinia ornare dolor in luctus. Cras ac hendrerit elit. In sit amet sodales risus. Ut fermentum mi accumsan massa fermentum, ut pretium tortor vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam sit amet massa eu ligula congue vulputate non id risus. Proin rhoncus lacus vel eros aliquet consequat. Pellentesque auctor arcu ut nunc dictum, ac sodales felis dapibus. Etiam at suscipit ante. Nulla auctor quis leo eu tempor. Phasellus aliquet erat ut felis vehicula, sit amet semper tortor vehicula. Ut tristique mollis lorem, sed venenatis orci. Mauris convallis facilisis placerat. Integer augue elit, scelerisque sed congue a, ullamcorper in massa. Duis eget enim volutpat, sodales nunc quis, aliquam metus. In nisi eros, suscipit sed luctus id, ullamcorper eu tellus. Donec feugiat placerat pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec nunc massa, convallis a dui et, accumsan placerat mauris. In bibendum enim ac libero molestie gravida. Suspendisse posuere consequat interdum. Proin at condimentum purus. Suspendisse rhoncus diam vitae arcu lacinia, quis vestibulum odio congue. Donec porttitor ligula ut libero luctus cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur tincidunt ante felis, pharetra varius ex venenatis vel. Vivamus et tristique diam. Pellentesque sagittis vestibulum dolor sit amet condimentum. In hac habitasse platea dictumst. Aenean et tortor at quam dapibus ultrices ut eget erat. Pellentesque eleifend aliquet massa a viverra. Praesent tellus purus, mollis sed dapibus sed, eleifend quis ligula. Etiam facilisis fermentum pellentesque. Ut ac iaculis diam, nec egestas risus. Nam nec risus metus. Quisque consequat, dolor ac hendrerit dignissim, orci enim rhoncus neque, eu vestibulum enim risus et massa. Donec scelerisque, massa non ultricies condimentum, ligula nisl elementum diam, a ornare dui sapien sit amet metus. Morbi consectetur nisi ligula, sit amet consequat mi dictum aliquam.</string>
    <string name="similar_titles">Similar titles</string>
    <string name="back_arrow">Back Arrow</string>
</resources>