<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailsFragment">

    <ImageView
        android:id="@+id/imgBackMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/image_placeholder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerImgPosterMovieDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/rounded_background_without_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPosterMovieDetails"
            android:layout_width="108dp"
            android:layout_height="192dp"
            android:background="@drawable/rounded_background_without_padding"
            android:backgroundTint="@color/black"
            android:clipToOutline="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/image_placeholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtVoteMovieDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_background_card"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:text="@string/no_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleMovieDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-36dp"
        android:text="@string/no_content"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/containerImgPosterMovieDetails"
        app:layout_constraintTop_toBottomOf="@id/containerImgPosterMovieDetails" />

    <ScrollView
        android:id="@+id/scrollDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerImgPosterMovieDetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleSynopsisMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/title_synopsis"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/txtDescriptionMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/lorem_ipsum"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/txtTitleSimilarMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/similar_titles"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/containerRecyclerSimilarMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/backArrowDetails"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background_card"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>